{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 678,
  "lineage": "dea779d3-2338-4719-ee56-c43711d451d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054b8278222dac82e",
            "association_id": "eipassoc-05a790e76360ee4f7",
            "domain": "vpc",
            "id": "eipalloc-054b8278222dac82e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07c726333f22052be",
            "private_dns": "ip-10-0-0-206.ec2.internal",
            "private_ip": "10.0.0.206",
            "public_dns": "ec2-52-22-246-119.compute-1.amazonaws.com",
            "public_ip": "52.22.246.119",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a4991ddec0b488a",
            "association_id": "eipassoc-0097ba74adae44c02",
            "domain": "vpc",
            "id": "eipalloc-08a4991ddec0b488a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01af4877f76cfb25e",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-34-203-163-255.compute-1.amazonaws.com",
            "public_ip": "34.203.163.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:internet-gateway/igw-08e8ecd1485c8303e",
            "id": "igw-08e8ecd1485c8303e",
            "owner_id": "881855020500",
            "tags": {
              "Name": "Main IGW"
            },
            "tags_all": {
              "Name": "Main IGW"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "was_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:loadbalancer/app/was-lb/1b542f9c470c80ba",
            "arn_suffix": "app/was-lb/1b542f9c470c80ba",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-was-lb-1710858240.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:881855020500:loadbalancer/app/was-lb/1b542f9c470c80ba",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "was-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-080015895c2009324"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06b3ce21442a77632"
              },
              {
                "subnet_id": "subnet-072677d1668a9fda4"
              }
            ],
            "subnets": [
              "subnet-06b3ce21442a77632",
              "subnet-072677d1668a9fda4"
            ],
            "tags": {
              "Name": "was-lb"
            },
            "tags_all": {
              "Name": "was-lb"
            },
            "vpc_id": "vpc-0d77c99017847f682",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.was_security_group",
            "aws_subnet.was_subnet1",
            "aws_subnet.was_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:loadbalancer/app/web-lb/18edd79c7f383f9f",
            "arn_suffix": "app/web-lb/18edd79c7f383f9f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-lb-635761843.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:881855020500:loadbalancer/app/web-lb/18edd79c7f383f9f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0968118f9ecc7e3f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0063495a547000de2"
              },
              {
                "subnet_id": "subnet-05d2e191f69935493"
              }
            ],
            "subnets": [
              "subnet-0063495a547000de2",
              "subnet-05d2e191f69935493"
            ],
            "tags": {
              "Name": "web-lb"
            },
            "tags_all": {
              "Name": "web-lb"
            },
            "vpc_id": "vpc-0d77c99017847f682",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web_lb_security_group",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "was_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:listener/app/was-lb/1b542f9c470c80ba/0a65d72e9a9e7074",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:targetgroup/was-tg20230308154145955100000011/2dbba0ed2effaff0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881855020500:listener/app/was-lb/1b542f9c470c80ba/0a65d72e9a9e7074",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:loadbalancer/app/was-lb/1b542f9c470c80ba",
            "port": 8000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_autoscaling_group.was_autoscaling_group",
            "aws_launch_template.was_launch_template",
            "aws_lb.was_lb",
            "aws_lb_target_group.was_target_group",
            "aws_security_group.was_security_group",
            "aws_subnet.was_subnet1",
            "aws_subnet.was_subnet2",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:listener/app/web-lb/18edd79c7f383f9f/0d810dbea8a25c7b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:targetgroup/web-tg20230308154145766100000010/0ee28a72a58507a1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881855020500:listener/app/web-lb/18edd79c7f383f9f/0d810dbea8a25c7b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:loadbalancer/app/web-lb/18edd79c7f383f9f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_autoscaling_group.web_autoscaling_group",
            "aws_launch_template.web_launch_template",
            "aws_lb.web_lb",
            "aws_lb_target_group.web_target_group",
            "aws_security_group.web_lb_security_group",
            "aws_security_group.web_security_group",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_subnet.web_subnet1",
            "aws_subnet.web_subnet2",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "was_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:targetgroup/was-tg20230308154145955100000011/2dbba0ed2effaff0",
            "arn_suffix": "targetgroup/was-tg20230308154145955100000011/2dbba0ed2effaff0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 12,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881855020500:targetgroup/was-tg20230308154145955100000011/2dbba0ed2effaff0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "was-tg20230308154145955100000011",
            "name_prefix": "was-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_autoscaling_group.was_autoscaling_group",
            "aws_launch_template.was_launch_template",
            "aws_security_group.was_security_group",
            "aws_subnet.was_subnet1",
            "aws_subnet.was_subnet2",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881855020500:targetgroup/web-tg20230308154145766100000010/0ee28a72a58507a1",
            "arn_suffix": "targetgroup/web-tg20230308154145766100000010/0ee28a72a58507a1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 12,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881855020500:targetgroup/web-tg20230308154145766100000010/0ee28a72a58507a1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-tg20230308154145766100000010",
            "name_prefix": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_autoscaling_group.web_autoscaling_group",
            "aws_launch_template.web_launch_template",
            "aws_security_group.web_security_group",
            "aws_subnet.web_subnet1",
            "aws_subnet.web_subnet2",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054b8278222dac82e",
            "connectivity_type": "public",
            "id": "nat-0f83e6094c471fed3",
            "network_interface_id": "eni-07c726333f22052be",
            "private_ip": "10.0.0.206",
            "public_ip": "52.22.246.119",
            "subnet_id": "subnet-0063495a547000de2"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a4991ddec0b488a",
            "connectivity_type": "public",
            "id": "nat-0da55b9d5233e1e3c",
            "network_interface_id": "eni-01af4877f76cfb25e",
            "private_ip": "10.0.1.64",
            "public_ip": "34.203.163.255",
            "subnet_id": "subnet-05d2e191f69935493"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:route-table/rtb-05a078e8e80d88b97",
            "id": "rtb-05a078e8e80d88b97",
            "owner_id": "881855020500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f83e6094c471fed3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private RT1"
            },
            "tags_all": {
              "Name": "Private RT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.ngw1",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:route-table/rtb-0961dfc33bd4eb767",
            "id": "rtb-0961dfc33bd4eb767",
            "owner_id": "881855020500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0da55b9d5233e1e3c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private RT2"
            },
            "tags_all": {
              "Name": "Private RT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.ngw2",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:route-table/rtb-0ccceee168fb79215",
            "id": "rtb-0ccceee168fb79215",
            "owner_id": "881855020500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e8ecd1485c8303e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee4aa15b01d61664",
            "route_table_id": "rtb-05a078e8e80d88b97",
            "subnet_id": "subnet-0f3641a1a18d76aa1"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.ngw1",
            "aws_route_table.private_rt1",
            "aws_subnet.public_subnet1",
            "aws_subnet.web_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee1993c4e0f6f4e9",
            "route_table_id": "rtb-0961dfc33bd4eb767",
            "subnet_id": "subnet-07574fba8b4a76572"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.private_rt2",
            "aws_subnet.public_subnet2",
            "aws_subnet.web_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d45dcba061ce069",
            "route_table_id": "rtb-05a078e8e80d88b97",
            "subnet_id": "subnet-06b3ce21442a77632"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.ngw1",
            "aws_route_table.private_rt1",
            "aws_subnet.public_subnet1",
            "aws_subnet.was_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07de55640510883ce",
            "route_table_id": "rtb-0961dfc33bd4eb767",
            "subnet_id": "subnet-072677d1668a9fda4"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.private_rt2",
            "aws_subnet.public_subnet2",
            "aws_subnet.was_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a74fb7a72481d6",
            "route_table_id": "rtb-05a078e8e80d88b97",
            "subnet_id": "subnet-084db678ca92e2157"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.ngw1",
            "aws_route_table.private_rt1",
            "aws_subnet.db_subnet1",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060a648f6329c38b8",
            "route_table_id": "rtb-0961dfc33bd4eb767",
            "subnet_id": "subnet-0c6b84ae6f2f4d15e"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.private_rt2",
            "aws_subnet.db_subnet2",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029be324f240e9652",
            "route_table_id": "rtb-0ccceee168fb79215",
            "subnet_id": "subnet-0063495a547000de2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0664ddfa861e80062",
            "route_table_id": "rtb-0ccceee168fb79215",
            "subnet_id": "subnet-05d2e191f69935493"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:security-group/sg-048c927b64c28d955",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048c927b64c28d955",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-security-group20230308154026256700000005",
            "name_prefix": "db-security-group",
            "owner_id": "881855020500",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:security-group/sg-0c60f13e0f5c0edbc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c60f13e0f5c0edbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "My HTTPS SG20230308154024737900000002",
            "name_prefix": "My HTTPS SG",
            "owner_id": "881855020500",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was_lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:security-group/sg-08f5dc4a659045ade",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f5dc4a659045ade",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0968118f9ecc7e3f1"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "was-lb-security-group2023030815402929690000000b",
            "name_prefix": "was-lb-security-group",
            "owner_id": "881855020500",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_lb_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:security-group/sg-080015895c2009324",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080015895c2009324",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "was-security-group20230308154024741700000003",
            "name_prefix": "was-security-group",
            "owner_id": "881855020500",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:security-group/sg-0968118f9ecc7e3f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0968118f9ecc7e3f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-lb-security-group20230308154024735600000001",
            "name_prefix": "web-lb-security-group",
            "owner_id": "881855020500",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:security-group/sg-0b984ab675217daef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b984ab675217daef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "web-security-group20230308154026044200000004",
            "name_prefix": "web-security-group",
            "owner_id": "881855020500",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:subnet/subnet-084db678ca92e2157",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084db678ca92e2157",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881855020500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_subnet1"
            },
            "tags_all": {
              "Name": "db_subnet1"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:subnet/subnet-0c6b84ae6f2f4d15e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6b84ae6f2f4d15e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881855020500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_subnet2"
            },
            "tags_all": {
              "Name": "db_subnet2"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:subnet/subnet-0063495a547000de2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0063495a547000de2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881855020500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:subnet/subnet-05d2e191f69935493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d2e191f69935493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881855020500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2"
            },
            "tags_all": {
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:subnet/subnet-06b3ce21442a77632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b3ce21442a77632",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881855020500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "was_subnet1"
            },
            "tags_all": {
              "Name": "was_subnet1"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:subnet/subnet-072677d1668a9fda4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072677d1668a9fda4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881855020500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "was_subnet2"
            },
            "tags_all": {
              "Name": "was_subnet2"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:subnet/subnet-0f3641a1a18d76aa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3641a1a18d76aa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881855020500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet1"
            },
            "tags_all": {
              "Name": "web_subnet1"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:subnet/subnet-07574fba8b4a76572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07574fba8b4a76572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881855020500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet2"
            },
            "tags_all": {
              "Name": "web_subnet2"
            },
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:vpc/vpc-0d77c99017847f682",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04cd88dd2ed67bf07",
            "default_route_table_id": "rtb-04c043ccf48f489e9",
            "default_security_group_id": "sg-0dab37564d2eec7f9",
            "dhcp_options_id": "dopt-05284ee1d18d97228",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d77c99017847f682",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c043ccf48f489e9",
            "owner_id": "881855020500",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:vpc-endpoint/vpce-057b4e32ce8aafbe4",
            "dns_entry": [
              {
                "dns_name": "vpce-057b4e32ce8aafbe4-f3v9savg.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-057b4e32ce8aafbe4-f3v9savg-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06126101X3DRG0XAHFWN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-057b4e32ce8aafbe4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0fc95b4a16fbb0269"
            ],
            "owner_id": "881855020500",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c60f13e0f5c0edbc"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0f3641a1a18d76aa1"
            ],
            "tags": {
              "Name": "main endpoint ec2messages"
            },
            "tags_all": {
              "Name": "main endpoint ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_security_group.https_sg",
            "aws_subnet.web_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:vpc-endpoint/vpce-0a99496fb94060483",
            "dns_entry": [
              {
                "dns_name": "vpce-0a99496fb94060483-jfa794vm.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a99496fb94060483-jfa794vm-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06118527BQI743VHYYB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a99496fb94060483",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04917bc94f251c8ef"
            ],
            "owner_id": "881855020500",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c60f13e0f5c0edbc"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0f3641a1a18d76aa1"
            ],
            "tags": {
              "Name": "main endpoint ssm"
            },
            "tags_all": {
              "Name": "main endpoint ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_security_group.https_sg",
            "aws_subnet.web_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881855020500:vpc-endpoint/vpce-047f0ddf3b386c280",
            "dns_entry": [
              {
                "dns_name": "vpce-047f0ddf3b386c280-wzjvqfff.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-047f0ddf3b386c280-wzjvqfff-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02027712NUQJM4F0OR1F"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-047f0ddf3b386c280",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-099fe6578f54cf60c"
            ],
            "owner_id": "881855020500",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c60f13e0f5c0edbc"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0f3641a1a18d76aa1"
            ],
            "tags": {
              "Name": "main endpoint ssmmessages"
            },
            "tags_all": {
              "Name": "main endpoint ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d77c99017847f682"
          },
          "dependencies": [
            "aws_security_group.https_sg",
            "aws_subnet.web_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}